--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ background-position: center;
     text-decoration: none;
     font-weight: 900;
     text-shadow: rgba(0, 0, 0, 0.7);
+    border-radius: 10px;
 }
 
 .logo span{
@@ -47,6 +48,7 @@ ul li a{
     margin: 10px;
     font-weight: 500;
     transition: 0.6s ease;
+    border-radius: 20px;
 }
 
 ul li a:hover{
@@ -88,6 +90,7 @@ ul li.active a{
     text-decoration: none;
     border: 1px solid #fff;
     padding: 10px 20px;
+    border-radius: 10px;
 }
 
 .btn{
@@ -97,4 +100,40 @@ ul li.active a{
 .btn:hover{
     background-color: #fff;
     color: #000;
+}
+
+.box{
+height: 40px;
+display: flex;
+cursor: pointer;
+padding: 10px 20px;
+background-color:white;
+border-radius: 30px;
+align-items: center;
+box-shadow: 0 10px 20px rgba(0, 0, 0,0.3);
+position: absolute;
+top: 70px;
+left: 10px;
+}
+
+.box:hover input{
+    width: 100px;
+}
+.box input{
+    width: 0;
+    outline: none;
+    border: none;
+    transition: 0.8s;
+    font-weight: 500;
+    background: transparent;
+}
+
+.box input::placeholder,.material-symbols-outlined{
+    color: black;
+    font-size: 15px;
+}
+
+.material-symbols-outlined{
+    height: 20px;
+    width: 30px;
 }
